--- a/hour_light_perfect_body.html
+++ b/hour_light_perfect_body.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
@@ -6,139 +5,269 @@
     <title>馥靈之鑰 Hour Light 完美體態｜芳香能量體態頻率抽牌</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
-        body {
-            background: url('https://github.com/HourLight/11/raw/main/background.jpg') no-repeat center center fixed;
-            background-size: cover;
-            font-family: 'Arial', sans-serif;
-            color: #6b4f3e;
-            padding: 20px;
+        :root {
+            --bg: #05030a;
+            --card-bg: rgba(8, 6, 25, 0.9);
+            --border-gold: rgba(233, 194, 125, 0.5);
+            --text-main: #f5f2ff;
+            --text-muted: #b5b0d0;
+            --accent-gold: #e9c27d;
+            --accent-gold-soft: #cda86e;
+            --shadow-soft: 0 18px 40px rgba(0, 0, 0, 0.8);
+            --radius-card: 20px;
+            --transition-fast: 0.22s ease-out;
+        }
+
+        * {
             margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
+
+        body {
+            min-height: 100vh;
+            background:
+                radial-gradient(circle at 0% 0%, #2c2149 0, transparent 55%),
+                radial-gradient(circle at 100% 0%, #123c57 0, transparent 55%),
+                url('https://github.com/HourLight/11/raw/main/background.jpg') center/cover no-repeat fixed;
+            background-blend-mode: multiply;
+            font-family: "Noto Sans TC", "Microsoft JhengHei", Arial, sans-serif;
+            color: var(--text-main);
+            padding: 24px 16px;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+        }
+
         .container {
+            width: 100%;
             max-width: 960px;
-            background-color: rgba(255,255,255,0.9);
+            background: linear-gradient(135deg, rgba(8,6,25,0.96), rgba(10,8,30,0.96));
             margin: auto;
-            padding: 40px;
-            border-radius: 20px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+            padding: 28px 22px 22px;
+            border-radius: var(--radius-card);
+            box-shadow: var(--shadow-soft);
             text-align: center;
+            border: 1px solid var(--border-gold);
+            position: relative;
+            overflow: hidden;
         }
+
+        .container::before {
+            content: "";
+            position: absolute;
+            inset: 0;
+            background:
+                radial-gradient(circle at 15% 0%, rgba(255,255,255,0.15) 0, transparent 55%),
+                radial-gradient(circle at 85% 0%, rgba(255,255,255,0.1) 0, transparent 55%);
+            opacity: 0.7;
+            pointer-events: none;
+        }
+
+        .inner {
+            position: relative;
+            z-index: 2;
+        }
+
         h1 {
-            font-size: 32px;
-            margin-bottom: 15px;
-            letter-spacing: 2px;
+            font-size: 1.8rem;
+            margin-bottom: 12px;
+            letter-spacing: 0.18em;
+            text-transform: uppercase;
+            color: var(--accent-gold);
         }
+
+        h1 span {
+            display: block;
+            font-size: 1rem;
+            letter-spacing: 0.22em;
+            margin-top: 4px;
+            color: var(--text-muted);
+        }
+
         .intro {
-            font-size: 18px;
-            background: rgba(255,255,255,0.6);
-            padding: 12px 20px;
-            border-radius: 15px;
+            font-size: 0.98rem;
+            background: rgba(5, 3, 18, 0.75);
+            padding: 10px 18px;
+            border-radius: 999px;
             display: inline-block;
-            margin-bottom: 25px;
+            margin-bottom: 22px;
+            color: var(--text-muted);
+            border: 1px solid rgba(255,255,255,0.18);
         }
-        select, button, .link-button {
-            background-color: #cda86e;
-            color: white;
+
+        .intro strong {
+            color: var(--accent-gold);
+        }
+
+        select,
+        button,
+        .link-button {
+            background: linear-gradient(135deg, var(--accent-gold), var(--accent-gold-soft));
+            color: #2b1a10;
             border: none;
-            padding: 12px 25px;
-            font-size: 18px;
-            border-radius: 12px;
-            margin: 10px 5px;
+            padding: 10px 22px;
+            font-size: 0.98rem;
+            border-radius: 999px;
+            margin: 10px 6px;
             cursor: pointer;
-            transition: 0.3s;
-            box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+            transition: all var(--transition-fast);
+            box-shadow: 0 12px 26px rgba(0,0,0,0.75);
+            font-weight: 600;
+            letter-spacing: 0.06em;
+            text-decoration: none;
         }
+
         select {
-            width: 90%;
-            max-width: 500px;
+            width: 100%;
+            max-width: 540px;
             appearance: none;
             -webkit-appearance: none;
             -moz-appearance: none;
-            text-align: center;
+            text-align-last: center;
+            background: rgba(5, 3, 18, 0.9);
+            color: var(--text-main);
+            border: 1px solid rgba(255,255,255,0.25);
+            box-shadow: 0 10px 20px rgba(0,0,0,0.7);
         }
-        button:hover, .link-button:hover {
-            background-color: #a28572;
-            transform: translateY(-3px);
+
+        select:hover {
+            border-color: var(--accent-gold-soft);
         }
+
+        select:focus {
+            outline: none;
+            border-color: var(--accent-gold);
+            box-shadow: 0 0 0 1px rgba(233,194,125,0.6);
+        }
+
+        button:hover,
+        .link-button:hover {
+            background: linear-gradient(135deg, #f1d49f, #e1a86d);
+            transform: translateY(-2px);
+            box-shadow: 0 18px 36px rgba(0,0,0,0.9);
+        }
+
+        .card-area-wrapper {
+            margin-top: 18px;
+        }
+
         .card {
             display: inline-block;
-            margin: 15px;
-            background-color: rgba(255,255,255,0.8);
-            padding: 12px;
-            border-radius: 15px;
-            box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+            margin: 12px;
+            background: rgba(5, 3, 18, 0.9);
+            padding: 10px;
+            border-radius: 16px;
+            box-shadow: 0 14px 30px rgba(0,0,0,0.85);
+            border: 1px solid rgba(255,255,255,0.16);
         }
+
         .card img {
             width: 200px;
+            max-width: 100%;
             border-radius: 12px;
+            border: 1px solid rgba(255,255,255,0.25);
+            box-shadow: 0 16px 32px rgba(0,0,0,0.9);
         }
+
         .card-number {
-            font-size: 16px;
+            font-size: 0.92rem;
             margin-top: 8px;
-            font-weight: bold;
+            font-weight: 600;
+            color: var(--accent-gold);
         }
+
         .reminder {
-            margin-top: 25px;
-            font-size: 16px;
-            background: rgba(255,255,255,0.6);
-            padding: 10px;
-            border-radius: 12px;
+            margin-top: 22px;
+            font-size: 0.85rem;
+            background: rgba(5,3,18,0.9);
+            padding: 12px 14px;
+            border-radius: 14px;
+            color: var(--text-muted);
+            border: 1px solid rgba(255,255,255,0.18);
+            line-height: 1.7;
         }
+
+        .footer-link {
+            margin-top: 16px;
+        }
+
         @media (max-width: 768px) {
+            .container {
+                padding: 22px 14px 18px;
+            }
             .card img {
                 width: 80%;
             }
-            select, button, .link-button {
+            select,
+            button,
+            .link-button {
                 width: 100%;
-                margin: 10px 0;
+                margin: 8px 0;
+            }
+            h1 {
+                font-size: 1.5rem;
+                letter-spacing: 0.14em;
             }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>🌟馥靈之鑰 Hour Light 完美體態🌟<br>芳香能量體態頻率抽牌</h1>
-        <div class="intro">
-            深呼吸，告訴你的身體：「我願意陪你重新開始。」<br>
-            這一次，讓靈魂帶你回家。
+        <div class="inner">
+            <h1>
+                🌟 馥靈之鑰完美體態 🌟
+                <span>芳香能量體態頻率抽牌</span>
+            </h1>
+            <div class="intro">
+                <strong>深呼吸一下，輕聲對你的身體說：</strong>「我願意好好照顧你，從今天開始慢慢調整。」<br>
+                不求一次就完美，只求每一步都更靠近你想要的樣子。
+            </div>
+
+            <div>
+                <select id="cardSelect">
+                    <option value="3">🌿 抽 3 張｜每日體態情緒小對焦</option>
+                    <option value="5">🌱 抽 5 張｜身體訊息解碼（壓力與情緒覺察）</option>
+                    <option value="7">🍀 抽 7 張｜體態節奏調頻（代謝與習慣檢視）</option>
+                    <option value="9">🌸 抽 9 張｜脈輪 × 生活步調整合</option>
+                    <option value="12">🌺 抽 12 張｜全方位身體意識重整</option>
+                    <option value="15">✨ 抽 15 張｜我是誰 × 瘦身頻率 × 行動座標</option>
+                </select>
+                <button onclick="drawCards()">✨ 開始抽牌 ✨</button>
+            </div>
+
+            <div id="cardArea" class="card-area-wrapper"></div>
+
+            <button onclick="copyNumbers()">📋 一鍵複製牌卡編號</button><br>
+
+            <button onclick="location.reload()">🔄 重新抽牌</button>
+
+            <div class="reminder">
+                本抽牌頁面為「馥靈之鑰 Hour Light」體態頻率小工具，<br>
+                僅提供情緒紓解、能量調頻、壓力管理與日常體態覺察等參考建議，<br>
+                非醫療行為，亦不等同任何形式之心理專業服務或減重醫療方案。<br>
+                如有身心健康或體重管理相關疑慮，請務必尋求合格之醫療或專業人員協助。<br>
+                © 馥靈之鑰智慧情緒系統，保留一切權利。
+            </div>
+
+            <div class="footer-link">
+                <a class="link-button" href="https://hourlight.github.io/">🏠 返回馥靈之鑰首頁</a>
+            </div>
         </div>
-
-        <div>
-            <select id="cardSelect">
-                <option value="3">🌿抽 3 張｜快速能量覺察（每日調頻）</option>
-                <option value="5">🌱抽 5 張｜身體訊息解碼（情緒覺察）</option>
-                <option value="7">🍀抽 7 張｜深層體態調頻（能量代謝）</option>
-                <option value="9">🌸抽 9 張｜脈輪整合 × 完美體態覺察</option>
-                <option value="12">🌺抽 12 張｜全方位身體意識重建</option>
-                <option value="15">✨抽 15 張｜我是誰 × 瘦身頻率重塑 × 業力清理</option>
-            </select>
-            <button onclick="drawCards()">✨ 開始抽牌 ✨</button>
-        </div>
-
-        <div id="cardArea"></div>
-
-        <button onclick="copyNumbers()">📋 一鍵複製牌卡編號</button><br>
-       
-        <button onclick="location.reload()">🔄 重新抽牌</button>
-
-        <div class="reminder">
-            ⚠️ 本系統僅提供能量覺察與身心頻率調整之建議，非醫療診斷或醫療建議。若有嚴重不適請尋求專業協助。<br>
-            © 馥靈之鑰智慧情緒系統所有權歸逸君與馥靈之鑰團隊所有。
-        </div>
-
-        <a class="link-button" href="https://hourlight.github.io/">🏠 返回首頁</a>
     </div>
 
     <script>
         let selectedCards = [];
 
         function formatCardNumber(card) {
-            return card <= 22 ? 'A' + (card - 1).toString().padStart(2,'0') : (card - 22).toString().padStart(3,'0');
+            return card <= 22
+                ? 'A' + (card - 1).toString().padStart(2, '0')
+                : (card - 22).toString().padStart(3, '0');
         }
 
         function drawCards() {
             const num = parseInt(document.getElementById('cardSelect').value);
-            alert("請閉上眼睛，對你的身體許下一個承諾。");
+            alert("請先閉上眼睛三秒，心裡想著：『我想看見現在最需要調整的體態方向。』準備好再按確認。");
 
             selectedCards = [];
             while (selectedCards.length < num) {
@@ -148,7 +277,7 @@
 
             document.getElementById('cardArea').innerHTML = selectedCards.map(card => `
                 <div class="card">
-                    <img src="https://github.com/HourLight/11/raw/main/LINE_ALBUM_2025.3.23_250323_${card}.jpg">
+                    <img src="https://github.com/HourLight/11/raw/main/LINE_ALBUM_2025.3.23_250323_${card}.jpg" alt="體態頻率牌卡 ${formatCardNumber(card)}">
                     <div class="card-number">編號：${formatCardNumber(card)}</div>
                 </div>
             `).join('');
@@ -156,13 +285,13 @@
 
         function copyNumbers() {
             if (!selectedCards.length) {
-                alert("請先抽牌！");
+                alert("你還沒抽牌喔，先來一組體態頻率再複製吧。");
                 return;
             }
             const nums = selectedCards.map(formatCardNumber).join(', ');
             navigator.clipboard.writeText(nums)
-                .then(() => alert('牌卡編號已複製！'))
-                .catch(() => alert('無法自動複製，請手動複製：' + nums));
+                .then(() => alert('牌卡編號已複製，可以貼給調頻師或記錄在你的體態日記裡。'))
+                .catch(() => alert('裝置無法自動複製，請手動複製這段編號：' + nums));
         }
     </script>
 </body>
